--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shorturl",
+  "homepage": "https://conettoovando.github.io/Slink-Website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.4",
@@ -17,6 +20,7 @@
     "axios": "^1.7.9",
     "dotenv": "16.4.7",
     "framer-motion": "^11.16.0",
+    "gh-pages": "^6.3.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
